--- a/classwork/Lesson 1/index.html
+++ b/classwork/Lesson 1/index.html
@@ -14,7 +14,7 @@
 <h2><s>Lorem ipsum dolor sit amet, consectetur adipisicing elit </s></h2>
 <h3>Lorem ipsum dolor sit amet, consectetur.</h3>
 <h4>Lorem ipsum dolor sit amet<span>.</span></h4>
-<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit.  <a href="lesson%201.2.html">Ipsum.</a></h5>
+<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit.  <a href="style.css">Ipsum.</a></h5>
 <h6>Lorem ipsum dolor sit amet, consectetur adipisicing.</h6>
 <hr>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -25,7 +25,7 @@
 <span>Lorem ipsum dolor sit amet, consectetur adipisicing.</span>
 <span>Lorem ipsum dolor sit amet, consectetur adipisicing.</span>
 <img src="https://images.unsplash.com/photo-1756634355260-b2f9df55cce1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyNHx8fGVufDB8fHx8fA%3D%3D" alt="astronauts">
-<img src="img/cajeo-zhang-8jW6xCtmYsw-unsplash.jpg" alt="astronauts">
+<img src="img" alt="astronauts">
 </body>
 </html>
 
