--- a/homeworks/Lesson 1/hw1-2/index.html
+++ b/homeworks/Lesson 1/hw1-2/index.html
@@ -6,6 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        sup{
+            font-size: 10px;
+        }
+    </style>
 </head>
 <body>
 <p>Квадрат числа: a <sup>2</sup> </p>
@@ -14,10 +19,10 @@
 
 <p>Формула квадратного кореня: &#8730;<sup>n</sup></p>
 
-<p>Формула квадратного рівняння: x = (-b &#177; (b2 - 4ac)) / 2a</p>
+<p>Формула квадратного рівняння: x = (-b &#177; &#8730;(b<sup>2</sup> - 4ac)) / 2a</p>
 
-<p>Площа кола: S = πr2</p>
+<p>Площа кола: S = &#960;r<sup>2</sup></p>
 
-<p>Теорема Піфагора: c = √(a2 + b2)</p>
+<p>Теорема Піфагора: c = &#8730;(a<sup>2</sup> + b<sup>2</sup>)</p>
 </body>
 </html>
