--- a/homeworks/Lesson 1/hw1-4/index.html
+++ b/homeworks/Lesson 1/hw1-4/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        span{
+        span {
             background-color: #d0c9c9;
             padding: 5px 10px;
         }
@@ -15,19 +15,19 @@
 </head>
 <body>
 <p>Player 1</p>
-<span>2&clubs;</span>
-<span>9&hearts;</span>
-<span style="color: #8c0202">6&hearts;</span>
-<span style="color: #8c0202">A&diams;</span>
-<span style="color: #8c0202">Q&spades;</span>
-<span>J&clubs;</span>
+<span>2 <span>&clubs;</span></span>
+<span>9 <span>&hearts;</span></span>
+<span style="color: #8c0202">6 <span>&hearts;</span></span>
+<span style="color: #8c0202">A <span>&diams;</span></span>
+<span style="color: #8c0202">Q <span>&spades;</span></span>
+<span>J <span>&clubs;</span></span>
 <p>Player 2</p>
-<span>2&clubs;</span>
-<span>9&hearts;</span>
-<span style="color: #8c0202">6&hearts;</span>
-<span style="color: #8c0202">A&diams;</span>
-<span style="color: #8c0202">Q&spades;</span>
-<span>J&clubs;</span>
+<span>2 <span>&clubs;</span></span>
+<span>9 <span>&hearts;</span></span>
+<span style="color: #8c0202">6 <span>&hearts;</span></span>
+<span style="color: #8c0202">A <span>&diams;</span></span>
+<span style="color: #8c0202">Q <span>&spades;</span></span>
+<span>J <span>&clubs;</span></span>
 
 </body>
 </html>
