--- a/homeworks/Lesson 2/hw2-1/index2-1.html
+++ b/homeworks/Lesson 2/hw2-1/index2-1.html
@@ -16,40 +16,40 @@
         <p>Pepper</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://png.pngtree.com/png-vector/20230328/ourmid/pngtree-red-apple-fruit-realistic-transparent-png-image_6673484.png" alt="apple">
+        <p>Apple</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://pics.clipartpng.com/Cheese_PNG_Clipart-3141.png" alt="cheese">
+        <p>Cheese</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://pics.clipartpng.com/Corn_PNG_Clipart-466.png" alt="corn">
+        <p>Corn</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://file.aiquickdraw.com/imgcompressed/img/compressed_63d801ef0de2e1196b3079e8192d3c67.webp" alt="mushroom">
+        <p>Mushroom</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://static.vecteezy.com/system/resources/previews/059/053/244/non_2x/a-single-bulb-of-garlic-isolated-on-black-background-high-resolution-image-free-png.png" alt="garlic">
+        <p>Garlic</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://png.pngtree.com/png-vector/20240413/ourmid/pngtree-a-piece-of-meat-that-is-cut-in-half-png-image_11955762.png" alt="beef">
+        <p>Beef</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://png.pngtree.com/png-vector/20230919/ourmid/pngtree-fresh-nile-tilapia-or-pla-nin-in-thai-freshwater-fish-isolated-png-image_10086755.png" alt="fish">
+        <p>Fish</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://cdn-img.freshdi.com/480x480/files/1d7d59170d53aca6ca27646855ee8ac2.png" alt="eggs">
+        <p>Eggs</p>
     </div>
     <div class="card">
-        <img src="https://royaltyfreefootages.com/upload/video/Capsicum%20green,%20Capsicum%20green%20png,%20Capsicum%20png%20image,%20transparent%20Capsicum%20png%20image,%20Capsicum%20png%20full%20hd%20images%20download_1658994486.png" alt="pepper">
-        <p>Pepper</p>
+        <img src="https://png.pngtree.com/png-vector/20250323/ourmid/pngtree-fresh-coriander-leaves-bunch-png-image_15857611.png" alt="coriander">
+        <p>Coriander</p>
     </div>
     </div>
 <hr>
