--- a/homeworks/Lesson 1/hw1-1/hw1-1.html
+++ b/homeworks/Lesson 1/hw1-1/hw1-1.html
@@ -18,7 +18,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Terminator</title>
-    <link rel="stylesheet" href="style1-1.css">
+    <link rel="stylesheet" href="hw1-1.css">
     <style>
         p {
             font-size: 20px;
