--- a/homeworks/Lesson 1/hw1-3/hw1-3.html
+++ b/homeworks/Lesson 1/hw1-3/hw1-3.html
@@ -28,7 +28,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style1-3.css">
+    <link rel="stylesheet" href="hw1-3.css">
     <style>
         body{
             background-image: url("https://images.unsplash.com/photo-1502691876148-a84978e59af8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
