--- a/homeworks/Lesson 1/hw1-4/hw1-4.html
+++ b/homeworks/Lesson 1/hw1-4/hw1-4.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style1-4.css">
+    <link rel="stylesheet" href="hw1-4.css">
     <style>
         span {
             background-color: #d0c9c9;
