--- a/homeworks/Lesson 1/hw1-5/hw1-5.html
+++ b/homeworks/Lesson 1/hw1-5/hw1-5.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Бетмен</title>
-    <link rel="stylesheet" href="style1-5.css">
+    <link rel="stylesheet" href="hw1-5.css">
 </head>
 <body>
 <h1>Фільм "Бетмен" (Batman)</h1>
