--- a/homeworks/Lesson 2/hw2-4/hw2-4.html
+++ b/homeworks/Lesson 2/hw2-4/hw2-4.html
@@ -12,7 +12,7 @@
 <!--    <link rel="preconnect" href="https://fonts.googleapis.com">-->
 <!--    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
 <!--    <link href="https://fonts.googleapis.com/css2?family=Rubik+Pixels&display=swap" rel="stylesheet">-->
-    <link rel="stylesheet" href="style2-4.css">
+    <link rel="stylesheet" href="hw2-4.css">
 </head>
 <body>
 <div class="flex">
