--- a/homeworks/Lesson 3/hw3-2/hw3-2.html
+++ b/homeworks/Lesson 3/hw3-2/hw3-2.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style3-2.css">
+    <link rel="stylesheet" href="hw3-2.css">
 </head>
 <body>
 <section class="top-section">
