--- a/homeworks/Lesson 4/hw4-2/hw4-2.html
+++ b/homeworks/Lesson 4/hw4-2/hw4-2.html
@@ -6,8 +6,21 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="hw4-2.css">
 </head>
 <body>
-
+<header><p>Header</p></header>
+<main>
+    <div class="main__Contents">
+        <section class="main__Contents-1"><p>Content - 1</p></section>
+        <section class="main__Contents-2"><p>Content - 2</p></section>
+        <section class="main__Contents-3"><p>Content - 3</p></section>
+    </div>
+    <div class="main__spam">
+        <aside class="main__spam-1"><p>spam -1</p></aside>
+        <aside class="main__spam-2"><p>spam -2</p></aside>
+    </div>
+</main>
+<footer><p>footer</p></footer>
 </body>
 </html>
