--- a/classwork/Lesson 5/lesson5-4.html
+++ b/classwork/Lesson 5/lesson5-4.html
@@ -6,11 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="stylesheet" href="lesson5-4.css">
 </head>
 <body>
-
+<div class="flex">
+    <div class="card yellow"></div>
+    <div class="card blue"></div>
+    <div class="card green"></div>
+    <div class="card pink"></div>
+    <div class="card orange"></div>
+</div>
 </body>
 </html>
